Created simple Add Item flow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,13 @@
   </head>
 
   <body>
-
+    <% flash.each do |key, value| %>
+      <div class='flash' id='<%= key %>'>
+        <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
 
-    
     <%= javascript_include_tag "application" %>
   </body>
 </html>
