implement Product CRUD

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,5 @@
-<%= link_to "Add an Item", new_item_path %>
-<%= link_to "New Product", new_product_path %>
+<%= link_to "Add an Item to your list", new_item_path %>
+<p>
+<%= link_to "List products", "/products" %>
+<p>
+<%= link_to "Add a new product", new_product_path %>
