--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,6 @@
 <h2><%= @product.name %></h2>
+<%= link_to "Edit Product", edit_product_path(@product) %>
+<%= link_to "Delete Product",
+    product_path(@product),
+    :method => :delete,
+:confirm => "Are you sure you want to delete this product?" %>
