--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,14 @@
         <%= value %>
       </div>
     <% end %>
+    <nav>
+      <% if user_signed_in? %>
+        Signed in as <%= current_user.email %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path %>
+        <%= link_to "Sign in", new_user_session_path %>
+      <% end %>
+    </nav>
     <%= yield %>
 
     <%= javascript_include_tag "application" %>
