--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,6 +12,9 @@
     <%= f.label :size %><br />
     <%= f.text_field :size %>
   <p>
+    <%= f.label :description %><br />
+    <%= f.text_field :description %>
+  <p>
     <%= f.label :upc %><br />
     <%= f.text_field :upc %>
   <%= f.submit %>
