--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for (@product), :html => { :multipart => true } do |f| %>
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -17,5 +17,9 @@
   <p>
     <%= f.label :upc %><br />
     <%= f.text_field :upc %>
+  <p>
+    <%= f.label :image, "Image" %><br>
+    <%= f.file_field :image %>
+  </p>
   <%= f.submit %>
 <% end %>
