--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+
 <h2><%= @product.name %></h2>
 <% admins_only do %>
   <%= link_to "Edit Product", edit_product_path(@product) %>
@@ -5,6 +6,19 @@
       product_path(@product),
       :method => :delete,
   :confirm => "Are you sure you want to delete this product?" %>
+
+<% end %>
+
+<% if @product.image.exists? %>
+  <h3>Attached Image</h3>
+  <div id="product" class="image">
+    <img src='<%= @product.image.url %>'>
+    <p>
+      <%= link_to File.basename(@product.image.path),@product.image.url %>
+    </p>
+    <p><small><%= number_to_human_size(@product.image.size) %>
+	(<%= @product.image.content_type %>)</small></p>
+  </div>
 <% end %>
 
 <%= render "form" %>
