Changed currency from integer to float, removed Money gem, updated product view, added product css)

--- a/app/views/products/_show_product_form.html.erb
+++ b/app/views/products/_show_product_form.html.erb
@@ -1,7 +1,16 @@
+<% if @product.image.exists? %>
+  <h3>Attached Image</h3>
+  <div id="product" class="image">
+    <img src='<%= @product.image.url %>'>
+    <p>
+      <%= link_to File.basename(@product.image.path),@product.image.url %>
+    </p>
+    <p><small><%= number_to_human_size(@product.image.size) %>
+	(<%= @product.image.content_type %>)</small></p>
+  </div>
+<% end %>
+<p>
 <div class="product">
-  <p class="product_name">
-    <%= @product.name %>
-  <p>
     <div class="product_description_header">
       Description:
     </div>
@@ -10,7 +19,7 @@
     </div>
   </p>
   <p class="product_price">
-    Price: <%= @product.price %>
+    Price: <%= number_to_currency(@product.price) %>
   </p>
   <div class="product_more_info">
     <p>
@@ -18,6 +27,6 @@
     <p>
       UPC: <%= @product.upc %>
     <p>
-      Manufacturered by<%= @product.manufacturer %>
+      Manufacturered by: <%= @product.manufacturer %>
   </div>
 </div>
