fixed some failing specs

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -3,3 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .image img { height:200px }
+.product_description_header strong {font-weight: boulder;}
+.product_description 
+		     {
+			background-color:#cccccc;
+		     }
+.product_description li
+		     {
+			margin-left:40px;
+			text-indent:10px;
+		     }
