--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,10 @@
-
-
 <h2><%= @product.name %></h2>
 <% admins_only do %>
-  <%= link_to "Edit Product", edit_product_path(@product) %>
-  <%= link_to "Delete Product",
-      product_path(@product),
-      :method => :delete,
-  :confirm => "Are you sure you want to delete this product?" %>
-
+  <ul class="button-group">
+    <li> <%= link_to "Edit", edit_product_path(@product), :class => "small button" %></li>
+    <li> <%= link_to "Delete",product_path(@product),:method => :delete,  :confirm => "Are you sure you want to delete '" + @product.name + "'?", :class => "small button" %></li>
+  </ul>
+      
 <% end %>
 
 <%= render "show_product_form" %>
