--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,11 @@
  *= require_tree .
  *= require foundation_and_overrides
  */
+nav {
+  float: right;
+}
+
+.label.notice {
+  background-color: #5da423;
+  color: #fff;
+}
