--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,8 @@
 <p>
-  <%= link_to "Add an Item to your list", new_item_path %>
+  <%= link_to "Add an Item to your list", new_item_path, :class => "small button radius" %>
 </p>
 <p>
-  <%= link_to "List products", "/products" %>
+  <%= link_to "List products", "/products", :class => "small button radius" %>
 </p>
 <p>
   <% admins_only do %>
