--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,30 +1,23 @@
 <h2>Add an Item</h2>
 
-  <table id="productlist">
-    <thead>
-      <th></th>
-      <th>Product Name</th>
-      <th>Quantity</th>
-    </thead>
-    <tbody>
-      <% @products.each do |p|  %>
-        <tr class='<%= cycle("odd", "even") %>' id='product_<%= p.id %>'>
-          <td>
-            <% if item = @list.has_item?(p) %>
-              <%= link_to "Remove", item_path(item), :method => "delete",
-              :id => "remove_product#{p.id}" %>
-            <% else %>
-              <%= link_to "Add", items_path(:product => p), :method => "post",
-              :id => "add_product#{p.id}" %>
-            <% end %>
-          </td>
-          <td>
-            <strong><%= p.name %></strong><br>
-            <%= p.description %>
-          </td>
-          <td>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+<ul id="productlist">
+  <div class="row">
+  <% @products.each do |p|  %>
+    <li class='<%= cycle("odd", "even") %> cf' id='product_<%= p.id %>'>
+      <div class="small-1 columns">
+        <% if item = @list.has_item?(p) %>
+          <%= link_to "Remove", item_path(item), :method => "delete",
+          :id => "remove_product#{p.id}", :class => "button radius small alert" %>
+        <% else %>
+          <%= link_to "Add", items_path(:product => p), :method => "post",
+          :id => "add_product#{p.id}", :class => "button radius small success" %>
+        <% end %>
+      </div>
+      <div class="small-11 columns">
+        <h3><%= p.name %></h3>
+        <%= raw p.description %>
+      </div>
+    </li>
+  <% end %>
+  </div>
+</ul>
