added ability to select add to list/remove from list buttons

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .image img {
-  height:200px
+  width:200px
 }
 
 .product_description_header strong {
