--- a/app/views/products/_show_product_form.html.erb
+++ b/app/views/products/_show_product_form.html.erb
@@ -4,7 +4,8 @@
 <%   url = @product.image.url %>
 <% end %>
 <% productId = @product.id %>
-
+<%# productItemId = get_item_id_from_list_for_product_id() %>
+<% productItemId = nil %>
 <div class="product">
   <div class="row">
     <div class="product-main">
@@ -24,18 +25,20 @@
 	    Price: <%= number_to_currency(@product.price) %>
 	  </p>
 
-	 <%= link_to "Add To List", 
+	  <% if (productItemId == nil) %>
+	    <%= link_to "Add To List", 
 
-	     items_path(:product => productId),
-	 :method =>"post",
-	 :id => "add_product#{" + productId + "}",
-	 :class => "small button" %>
-
-	 <%= link_to "Remove From List",
-	     item_path(:product => productId),
-	 :method =>"delete",
-	 :id => "remove_product#{" + productId + "}",
-	 :class => "small button" %>
+		items_path(:product => productId),
+	                   :method =>"post",
+	                   :id => "add_product#{" + productId + "}",
+	                   :class => "small button" %>
+	  <% else %>
+	    <%= link_to "Remove From List",
+		item_path(productItemId),
+	                  :method =>"delete",
+	                  :id => "remove_product#{" + productItemId + "}",
+	                  :class => "small button" %>
+          <% end %>
 	</nav>
       </div>
 
