--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,23 +1,25 @@
-<h2>Add an Item</h2>
+<div class="small-10 columns small-centered">
+  <h2>Add an Item</h2>
 
-<ul id="productlist">
-  <div class="row">
-  <% @products.each do |p|  %>
-    <li class='<%= cycle("odd", "even") %> cf' id='product_<%= p.id %>'>
-      <div class="small-1 columns">
-        <% if item = @list.has_item?(p) %>
-          <%= link_to "Remove", item_path(item), :method => "delete",
-          :id => "remove_product#{p.id}", :class => "button radius small alert" %>
-        <% else %>
-          <%= link_to "Add", items_path(:product => p), :method => "post",
-          :id => "add_product#{p.id}", :class => "button radius small success" %>
-        <% end %>
-      </div>
-      <div class="small-11 columns">
-        <h3><%= p.name %></h3>
-        <%= raw p.description %>
-      </div>
-    </li>
-  <% end %>
-  </div>
-</ul>
+  <ul id="productlist">
+    <div class="row">
+    <% @products.each do |p|  %>
+      <li class='<%= cycle("odd", "even") %> cf' id='product_<%= p.id %>'>
+        <div class="small-1 columns">
+          <% if item = @list.has_item?(p) %>
+            <%= link_to "Remove", item_path(item), :method => "delete",
+            :id => "remove_product#{p.id}", :class => "button radius small alert" %>
+          <% else %>
+            <%= link_to "Add", items_path(:product => p), :method => "post",
+            :id => "add_product#{p.id}", :class => "button radius small success" %>
+          <% end %>
+        </div>
+        <div class="small-11 columns">
+          <h3><%= p.name %></h3>
+          <%= raw p.description %>
+        </div>
+      </li>
+    <% end %>
+    </div>
+  </ul>
+</div>
