--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -2,6 +2,33 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
- .user-list-view {
+.user-list-view {
+  position: relative;
   text-align: center;
- }
+}
+
+h3 {
+  color: #fff;
+  font-weight: 300;
+}
+
+.introduction h3 {
+  margin: 50px 0;
+}
+
+.sign-in-container {
+  color: #eee;
+  padding-top: 40px;
+  text-shadow: 0 1px 1px #000;
+}
+
+.to-start {
+  font-size: 1.5em;
+  padding: 30px 0;
+}
+
+.add-button {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+}
