One more change to wishe layout

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,7 +22,7 @@
               <div class="image">
                 <img src='<%= product.image.url %>'>
               </div>
-              <p><%= link_to product.name, item %> by <%= product.manufacturer %> $<%= product.price %></p>
+              <p><%= link_to product.name, item %><br /> by <%= product.manufacturer %> $<%= product.price %></p>
             </li>
           <% end %>
         </ul>
