various bug fixes

--- a/app/views/products/_edit_product_form.html.erb
+++ b/app/views/products/_edit_product_form.html.erb
@@ -17,23 +17,23 @@
 <% end %>
     <%= f.file_field :image %>
   </p>
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name %>
   <p>
-    <%= f.label :manufacturer %><br />
+    <%= f.label :manufacturer %>
     <%= f.text_field :manufacturer %>
   <p>
-    <%= f.label :price %><br />
+    <%= f.label :price %>
     <%= f.text_field :price %>
     <%# f.text_field number_to_currency(@product.price) %>
   <p>
-    <%= f.label :size %><br />
+    <%= f.label :size %>
     <%= f.text_field :size %>
   <p>
-    <%= f.label :description %><br />
+    <%= f.label :description %>
     <%= f.text_area :description %>
   <p>
-    <%= f.label :upc %><br />
+    <%= f.label :upc %>
     <%= f.text_field :upc %>
   <p>
   <%= f.submit %>
