--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -21,14 +21,24 @@
 }
 
 .product_more_info li {
-  margin-left:30px;
-  text-indent:10px;
-  list-style-type: none;
-}
+		     margin-left:30px;
+		     text-indent:10px;
+		     list-style-type: none;
+		     }
 
 .product_price p {
-  font-color:'blue';
-}
+	       font-color:'blue';
+	       }
+
+.product_list {
+	      background-color: #ddd;
+	      }
+
+.product_list ul {
+	        font-size:200%;
+		}
+.product_list img {
+	      width:50px}
 
 .even {
   background: #fafafa;
